gl33-master/src/test/deca/context/invalid/other/encapsulationFausse.deca
// Test invalid: utilisation d'un attribut protected

class MyClass{
    protected int a;
}

{
    MyClass m = new MyClass();
    int b = m.a;
}
